cli/tests/snapshot/inputs/errors/annotated_record_pattern_typecheck_fail.ncl
# capture = 'stderr'
# command = ['eval']
(
  let { x : Bool } = { x = 5 } in
  x
) : _
